@@ -2,6 +2,9 @@
 Release date: 
 * Enhancement: Added option to filter used and unused widgets in PowerPack settings
 * Fixed: Info Grid & Carousel - JS error when grid layout is selected
+* Fixed: Instagram Feed - Removed the option "Likes" as Instagram Basic Display API does not support it
+* Fixed: Instagram Feed - Removed the option "Comments" as Instagram Basic Display API does not support it
+* Fixed: Instagram Feed - Removed the option "Feed by Hashtag" as Instagram Basic Display API does not support it
 
 == 2.6.16 ==
 Release date: July 6, 2022
